fixed navbar on mobile/tablet

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -62,6 +62,12 @@ li {
     padding: 10px 0;
 }
 
+@media screen and (max-width: 1200px) {
+    .navbar-container{
+        position: fixed;
+    }
+}
+
 /* Media screen size */
 @media screen and (min-width: 762px) {
 
