--- a/src/components/pages/HomeScreen.css
+++ b/src/components/pages/HomeScreen.css
@@ -13,13 +13,15 @@ body{
 
 
 .cake img{
+    display: flex;
+    align-items: flex-start; 
     width: 100%;
-    align-self: flex-start;
 }
 
 .cupcake img{
+    display: flex;
+    align-items: flex-start; 
     width: 100%;
-    align-self: flex-start;
 }
 
 .info{
